Flytt kontorsperre henting til mapperService